# llm-api

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pyrightconfig.json
llm/: app.py  app_factory.py
llm/api/: llm.py  prompts.py  router.py  routes.py
llm/managers/: base.py  llm.py  prompts.py
llm/schemas/: llm.py  prompts.py
typings/transformers/: __init__.pyi  activations_tf.pyi  audio_utils.pyi  cache_utils.pyi  configuration_utils.pyi  convert_pytorch_checkpoint_to_tf2.pyi  convert_slow_tokenizer.pyi  convert_slow_tokenizers_checkpoints_to_fast.pyi  dynamic_module_utils.pyi  feature_extraction_sequence_utils.pyi  feature_extraction_utils.pyi  image_processing_base.pyi  image_processing_utils.pyi  image_processing_utils_fast.pyi  image_transforms.pyi  image_utils.pyi  modelcard.pyi  modeling_flash_attention_utils.pyi  modeling_flax_pytorch_utils.pyi  modeling_flax_utils.pyi  modeling_gguf_pytorch_utils.pyi  modeling_rope_utils.pyi  modeling_tf_pytorch_utils.pyi  modeling_tf_utils.pyi  modeling_utils.pyi  optimization.pyi  processing_utils.pyi  pytorch_utils.pyi  testing_utils.pyi  tf_utils.pyi  tokenization_utils.pyi  tokenization_utils_base.pyi  tokenization_utils_fast.pyi  trainer.pyi  trainer_callback.pyi  trainer_pt_utils.pyi  trainer_seq2seq.pyi  trainer_utils.pyi  training_args.pyi  training_args_tf.pyi
typings/transformers/agents/: __init__.pyi  agent_types.pyi  agents.pyi  default_tools.pyi  document_question_answering.pyi  image_question_answering.pyi  llm_engine.pyi  monitoring.pyi  prompts.pyi  python_interpreter.pyi  (+5 more)
(+1203 files in other folders)
